sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:13: error: value ++ is not a member of Int
  ctn++;
     ^