sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var etat=1;
  var ctn=0;
  while(etat!=0){
    etat=0;
    for(i <- 0 to getNombreValeurs()-2-ctn){
      if(plusPetit(i+1, i)){
        echange(i,i+1);
        etat=1;
      }
    }
  ctn++;
  }
}